[gd_scene load_steps=6 format=3 uid="uid://gfj7ac0p3ue4"]

[ext_resource type="Theme" uid="uid://w6rxo3pcpy3t" path="res://themes/default_theme.tres" id="1_w8k1j"]
[ext_resource type="StyleBox" uid="uid://dd8ms62mx5lni" path="res://themes/pokepanel.tres" id="2_8ykbj"]
[ext_resource type="Script" path="res://scripts/components/gui/vertical_option_list.gd" id="3_4x16t"]
[ext_resource type="Script" path="res://scripts/components/input/relay/vertical_option.gd" id="6_g3mr3"]
[ext_resource type="PackedScene" uid="uid://guia7s102eye" path="res://scenes/components/input/input.tscn" id="6_pisvk"]

[node name="VerticalOptionList" type="PanelContainer"]
offset_left = 3.0
offset_top = 7.0
offset_right = 122.0
offset_bottom = 61.0
theme = ExtResource("1_w8k1j")
theme_override_styles/panel = ExtResource("2_8ykbj")
script = ExtResource("3_4x16t")
options = "NEW GAME
OPTIONS
CREDITS
EXIT"
active = true

[node name="Options" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 0
text = " NEW GAME

 OPTIONS

 CREDITS

 EXIT"

[node name="Input" parent="." instance=ExtResource("6_pisvk")]
active = false
register_pressed = Array[int]([0, 1, 2, 3, 6])
register_released = Array[int]([])

[node name="Relay" type="Node" parent="Input"]
script = ExtResource("6_g3mr3")

[connection signal="action_button_pressed" from="Input/Relay" to="." method="_action_select_current"]
[connection signal="moved" from="Input/Relay" to="." method="move_cursor"]
[connection signal="returned" from="Input/Relay" to="." method="_return"]
[connection signal="select_button_pressed" from="Input/Relay" to="." method="_select_current_option"]
